--- a/customer/requirements.txt
+++ b/customer/requirements.txt
@@ -1,5 +1,6 @@
 Django>=2.0,<3.0
 django-phone-field==1.8.0
+django-timezone-field==4.0
 django-widget-tweaks==1.4.8
 psycopg2>=2.7,<3.0
 twilio==6.37.0
