--- a/customer/requirements.txt
+++ b/customer/requirements.txt
@@ -6,6 +6,8 @@ django-redis==4.11.0
 django-rq==2.3.0
 django-widget-tweaks==1.4.8
 psycopg2>=2.7,<3.0
+pubnub==4.5.0
 pytz==2019.3
+requests==2.23.0
 rq-scheduler==0.9
 twilio==6.37.0
